--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,6 @@
 ---
 ---
-@import "minima/skins/{{ site.minima.skin | default: 'classic' }}";
-@import "minima/initialize";
+@import 'minimal';
 /* "{{ site.theme }}" = Your theme name */
 /* Eg: @import 'jekyll-theme-cayman'; */
 
