--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,3 +9,21 @@
 body {
   background-color: #f3f3f3;
 }
+table {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+}
+table th {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+}
+table td {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+}
