--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,16 +15,19 @@ table {
     border-left: none;
     border-right: none;
     border-bottom: none;
+    vertical-align: top;
 }
 table th {
     border-top: none;
     border-left: none;
     border-right: none;
     border-bottom: none;
+    vertical-align: top;
 }
 table td {
     border-top: none;
     border-left: none;
     border-right: none;
     border-bottom: none;
+    vertical-align: top;
 }
