--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,7 @@ table {
     border-right: none;
     border-bottom: none;
     vertical-align: top;
+    text-align: left;
 }
 table th {
     border-top: none;
@@ -23,6 +24,7 @@ table th {
     border-right: none;
     border-bottom: none;
     vertical-align: top;
+    text-align: left;
 }
 table td {
     border-top: none;
@@ -30,4 +32,5 @@ table td {
     border-right: none;
     border-bottom: none;
     vertical-align: top;
+    text-align: left;
 }
