--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,5 +46,5 @@ table td {
 }
 
 img {
-    padding: 10px,10px,10px,10px; //padding positions
+    Padding: 10px,50px,10px,10px; //padding positions
 }
