--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,5 +46,6 @@ table td {
 }
 
 img {
-    Padding: 10px,50px,10px,10px; //padding positions
+    padding: 10px,50px,10px,10px; //padding positions
+    margin: 10px;
 }
