--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,6 +46,6 @@ table td {
 }
 
 img {
-    padding: 10px,50px,10px,10px; //padding positions
-    margin: 10px;
+    //padding: 10px,50px,10px,10px; //padding positions
+    margin: 0px, 0px, 15px, 0px;
 }
