--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,6 +46,6 @@ table td {
 }
 
 img {
-    padding: 0px,0px,50px,0px; //padding positions
-    //margin: 0px, 0px, 50px, 0px;
+    //padding: 50px,50px,50px,50px; //padding positions
+    margin: 50px, 50px, 50px, 50px;
 }
