--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,6 +46,6 @@ table td {
 }
 
 img {
-    //padding: 50px,50px,50px,50px; //padding positions
+    padding: 50px,50px,50px,50px; //padding positions
     margin: 50px, 50px, 50px, 50px;
 }
