--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,6 +46,8 @@ table td {
 }
 
 img {
+    width: 100px;
+    height: auto;
     padding: 50px,50px,50px,50px; //padding positions
     margin: 50px, 50px, 50px, 50px;
 }
