--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -48,6 +48,6 @@ table td {
 img {
     width: 100px;
     height: auto;
-    padding: 50px,50px,50px,50px; //padding positions
-    margin: 50px, 50px, 50px, 50px;
+    padding-left: 50px;
+    margin-left: 50px;
 }
