--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,4 +49,11 @@ img {
     width: 100px;
     height: auto;
     padding-left: 10px;
+    padding-bottom: 10px;
+}
+.imgbutton {
+    width: 120px;
+    height: auto;
+    padding-left: 0px;
+    padding-bottom: 0px;
 }
