--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,10 +50,12 @@ img {
     height: auto;
     padding-left: 10px;
     padding-bottom: 10px;
+    float: right;
 }
 .imgbutton {
     width: 120px;
     height: auto;
     padding-left: 0px;
     padding-bottom: 0px;
+    float: left;
 }
